--- a/index.html
+++ b/index.html
@@ -8,3 +8,12 @@
 </body>
 </html>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4P19BFBNTV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4P19BFBNTV');
+</script>
