--- a/index.html
+++ b/index.html
@@ -501,56 +501,6 @@
           </div>
         </div>
       </section>
-      <!-- Resources (Carousel on screens < 992px)-->
-      <section class="container py-5 my-md-3 my-lg-2 my-xl-4 my-xxl-5">
-        <div class="d-md-flex align-items-center pb-3 mb-md-3 mb-lg-4 mt-2 mt-sm-3 pt-2 pt-sm-4 pt-lg-5">
-          <h2 class="h1 text-center text-md-start mb-4 mb-md-0 me-md-4">Resources for you</h2>
-          <ul class="nav nav-pills flex-nowrap fs-sm text-nowrap overflow-auto text-nowrap w-100 mx-auto me-md-0 mb-0 pb-3 pb-md-0" style="max-width: 408px;">
-            <li class="nav-item mb-0"><a class="nav-link border" href="#">Articles</a></li>
-            <li class="nav-item mb-0"><a class="nav-link border active" href="#">Case studies</a></li>
-            <li class="nav-item mb-0"><a class="nav-link border" href="#">Tutorrials</a></li>
-          </ul>
-        </div>
-        <!-- Swiper-->
-        <div class="swiper" data-swiper-options="
-      {
-        &quot;spaceBetween&quot;: 24,
-        &quot;pagination&quot;: {
-          &quot;el&quot;: &quot;.swiper-pagination&quot;,
-          &quot;clickable&quot;: true
-        },
-        &quot;breakpoints&quot;: {
-          &quot;576&quot;: { &quot;slidesPerView&quot;: 2 },
-          &quot;992&quot;: { &quot;slidesPerView&quot;: 3 }
-        }
-      }
-    ">
-          <div class="swiper-wrapper">
-            <!-- Item-->
-            <article class="swiper-slide"><a href="#"><img class="rounded-5" src="assets/img/landing/saas-2/resources/01.jpg" alt="Image"></a>
-              <h3 class="h4 pt-4"><a href="#">Analytics for the HR department for the Klinos company</a></h3>
-              <p>Sapien ultrices egestas at faucibus eu diam velit diam id amet nibh quam rutrum fermentum diam natoque scelerisque viverra molestie fames...</p>
-              <div class="d-flex flex-wrap align-items-center pt-1 mt-n2"><a class="nav-link text-muted fs-sm fw-normal p-0 mt-2 me-3" href="#">6<i class="ai-share fs-lg ms-1"></i></a><a class="nav-link text-muted fs-sm fw-normal d-flex align-items-end p-0 mt-2" href="#">12<i class="ai-message fs-lg ms-1"></i></a><span class="fs-xs opacity-20 mt-2 mx-3">|</span><span class="fs-sm text-muted mt-2">12 hours ago</span><span class="fs-xs opacity-20 mt-2 mx-3">|</span><a class="badge bg-faded-primary text-primary fs-xs mt-2" href="#">Analytics</a></div>
-            </article>
-            <!-- Item-->
-            <article class="swiper-slide"><a href="#"><img class="rounded-5" src="assets/img/landing/saas-2/resources/02.jpg" alt="Image"></a>
-              <h3 class="h4 pt-4"><a href="#">Analytics for the Marketing department of Fast Inc.</a></h3>
-              <p>Morbi et massa fames ac scelerisque sit commodo dignissim faucibus vel quisque proin lectus. Laoreet sem adipiscing sollicitudin erat massa...</p>
-              <div class="d-flex flex-wrap align-items-center pt-1 mt-n2"><a class="nav-link text-muted fs-sm fw-normal p-0 mt-2 me-3" href="#">10<i class="ai-share fs-lg ms-1"></i></a><a class="nav-link text-muted fs-sm fw-normal d-flex align-items-end p-0 mt-2" href="#">19<i class="ai-message fs-lg ms-1"></i></a><span class="fs-xs opacity-20 mt-2 mx-3">|</span><span class="fs-sm text-muted mt-2">3 days ago</span><span class="fs-xs opacity-20 mt-2 mx-3">|</span><a class="badge bg-faded-primary text-primary fs-xs mt-2" href="#">Analytics</a></div>
-            </article>
-            <!-- Item-->
-            <article class="swiper-slide"><a href="#"><img class="rounded-5" src="assets/img/landing/saas-2/resources/03.jpg" alt="Image"></a>
-              <h3 class="h4 pt-4"><a href="#">Research data structuring and presentation in diagrams</a></h3>
-              <p>Egestas in neque scelerisque semper sit at eu cursus faucibus velit cras at aliquam sed dictum at at orci curabitur dictumst viverra non pharetra...</p>
-              <div class="d-flex flex-wrap align-items-center pt-1 mt-n2"><a class="nav-link text-muted fs-sm fw-normal p-0 mt-2 me-3" href="#">21<i class="ai-share fs-lg ms-1"></i></a><a class="nav-link text-muted fs-sm fw-normal d-flex align-items-end p-0 mt-2" href="#">37<i class="ai-message fs-lg ms-1"></i></a><span class="fs-xs opacity-20 mt-2 mx-3">|</span><span class="fs-sm text-muted mt-2">5 days ago</span><span class="fs-xs opacity-20 mt-2 mx-3">|</span><a class="badge bg-faded-primary text-primary fs-xs mt-2" href="#">Analytics</a></div>
-            </article>
-          </div>
-          <!-- Pagination (bullets)-->
-          <div class="swiper-pagination position-relative bottom-0 mt-2 pt-4 d-lg-none"></div>
-        </div>
-        <!-- Read more button-->
-        <div class="text-center pt-4 my-2 mt-lg-0 pt-lg-5 pb-sm-2 pb-md-4"><a class="btn btn-outline-primary rounded-pill" href="#">Read all case studies</a></div>
-      </section>
       <!-- CTA-->
       <section class="pt-2 pt-md-0">
         <div class="position-relative pt-lg-3 pt-xl-4 pt-xxl-5">
@@ -576,7 +526,7 @@
           <div class="col-md-4 col-lg-3 pb-2 pb-md-0 mb-4 mb-md-0"><a class="navbar-brand py-0 mb-3 mb-md-4" href="index.html"><span class="text-primary flex-shrink-0 me-2">
                 <svg version="1.1" width="35" height="32" viewBox="0 0 36 33" xmlns="http://www.w3.org/2000/svg">
                   <path fill="currentColor" d="M35.6,29c-1.1,3.4-5.4,4.4-7.9,1.9c-2.3-2.2-6.1-3.7-9.4-3.7c-3.1,0-7.5,1.8-10,4.1c-2.2,2-5.8,1.5-7.3-1.1c-1-1.8-1.2-4.1,0-6.2l0.6-1.1l0,0c0.6-0.7,4.4-5.2,12.5-5.7c0.5,1.8,2,3.1,3.9,3.1c2.2,0,4.1-1.9,4.1-4.2s-1.8-4.2-4.1-4.2c-2,0-3.6,1.4-4,3.3H7.7c-0.8,0-1.3-0.9-0.9-1.6l5.6-9.8c2.5-4.5,8.8-4.5,11.3,0L35.1,24C36,25.7,36.1,27.5,35.6,29z"></path>
-                </svg></span><span class="text-light">Around</span></a>
+                </svg></span><span class="text-light">Chaos Trainer</span></a>
             <p class="fs-sm pb-2 pb-md-3 mb-3">Tellus non diam morbi quam vel venenatis proin sed. Dolor elementum nunc dictum interdum amet arcu aenean eu integer</p>
             <div class="d-flex"><a class="btn btn-icon btn-sm btn-secondary btn-facebook rounded-circle me-3" href="#"><i class="ai-facebook"></i></a><a class="btn btn-icon btn-sm btn-secondary btn-instagram rounded-circle me-3" href="#"><i class="ai-instagram"></i></a><a class="btn btn-icon btn-sm btn-secondary btn-linkedin rounded-circle" href="#"><i class="ai-linkedin"></i></a></div>
           </div>
