--- a/index.html
+++ b/index.html
@@ -142,15 +142,10 @@
     <link rel="stylesheet" media="screen" href="assets/vendor/aos/dist/aos.css"/>
     <!-- Main Theme Styles + Bootstrap-->
     <link rel="stylesheet" media="screen" href="assets/css/theme.min.css">
+    <link rel="stylesheet" media="screen" href="assets/css/theme-override.css">
   </head>
   <!-- Body-->
   <body>
-    <!-- Page loading spinner-->
-    <div class="page-loading active">
-      <div class="page-loading-inner">
-        <div class="page-spinner"></div><span>Loading...</span>
-      </div>
-    </div>
     <!-- Page wrapper-->
     <main class="page-wrapper">
       <div class="dark-mode">
@@ -188,15 +183,15 @@
                 <div class="parallax-layer zindex-2" data-depth="0.4"><img src="assets/img/landing/saas-2/hero/05.png" alt="Layer"></div>
               </div>
             </div>
-            <div class="col-lg-5 order-lg-1 text-center text-lg-start me-xl-5"><span class="badge bg-faded-warning text-warning fs-sm">Take your data to the next level&nbsp; 🚀</span>
-              <h1 class="display-4 py-3 my-2 mb-xl-3">The platform to manage business</h1>
+            <div class="col-lg-5 order-lg-1 text-center text-lg-start me-xl-5"><span class="badge bg-faded-warning text-warning fs-sm">Elevate your DevOps skills through real-world challenges&nbsp; 🚀</span>
+              <h1 class="display-4 py-3 my-2 mb-xl-3">The platform to master your skills</h1>
               <ul class="list-unstyled d-table text-start mx-auto mx-lg-0 mb-0">
-                <li class="d-flex pb-2 mb-1"><i class="ai-check-alt text-primary lead me-2"></i>Segmenting the audience is easy and simple</li>
-                <li class="d-flex pb-2 mb-1"><i class="ai-check-alt text-primary lead me-2"></i>Functional dashboard for managing your data</li>
-                <li class="d-flex pb-2 mb-1"><i class="ai-check-alt text-primary lead me-2"></i>Key performance indicators of team interaction</li>
+                <li class="d-flex pb-2 mb-1"><i class="ai-check-alt text-primary lead me-2"></i>Risk-free, simulated environments where you can experience and troubleshoot failures</li>
+                <li class="d-flex pb-2 mb-1"><i class="ai-check-alt text-primary lead me-2"></i>Train yourself to add features to real-world environments</li>
+                <li class="d-flex pb-2 mb-1"><i class="ai-check-alt text-primary lead me-2"></i>Explore real-world architectures</li>
               </ul>
               <div class="d-flex justify-content-center justify-content-lg-start pt-4 pt-xl-5">
-                <div class="text-center"><a class="btn btn-lg btn-primary rounded-pill w-100 w-sm-auto" href="#">Start free 14-day trial</a>
+                <div class="text-center"><a class="btn btn-lg btn-primary rounded-pill w-100 w-sm-auto" href="#">Join now</a>
                   <p class="fs-sm pt-2 mt-sm-1 mb-0">100% free to get started!</p>
                 </div>
               </div>
