--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
     <!-- Main Theme Styles + Bootstrap-->
     <link rel="stylesheet" media="screen" href="assets/css/theme.min.css">
     <link rel="stylesheet" media="screen" href="assets/css/theme-override.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   </head>
   <!-- Body-->
   <body>
@@ -192,7 +193,7 @@
               </ul>
               <div class="d-flex justify-content-center justify-content-lg-start pt-4 pt-xl-5">
                 <div class="text-center"><a class="btn btn-lg btn-primary rounded-pill w-100 w-sm-auto" href="#">Join now</a>
-                  <p class="fs-sm pt-2 mt-sm-1 mb-0">100% free to get started!</p>
+                  <!-- <p class="fs-sm pt-2 mt-sm-1 mb-0">100% free to get started!</p> -->
                 </div>
               </div>
             </div>
@@ -523,7 +524,23 @@
                   <path fill="currentColor" d="M35.6,29c-1.1,3.4-5.4,4.4-7.9,1.9c-2.3-2.2-6.1-3.7-9.4-3.7c-3.1,0-7.5,1.8-10,4.1c-2.2,2-5.8,1.5-7.3-1.1c-1-1.8-1.2-4.1,0-6.2l0.6-1.1l0,0c0.6-0.7,4.4-5.2,12.5-5.7c0.5,1.8,2,3.1,3.9,3.1c2.2,0,4.1-1.9,4.1-4.2s-1.8-4.2-4.1-4.2c-2,0-3.6,1.4-4,3.3H7.7c-0.8,0-1.3-0.9-0.9-1.6l5.6-9.8c2.5-4.5,8.8-4.5,11.3,0L35.1,24C36,25.7,36.1,27.5,35.6,29z"></path>
                 </svg></span><span class="text-light">Chaos Trainer</span></a>
             <p class="fs-sm pb-2 pb-md-3 mb-3">Tellus non diam morbi quam vel venenatis proin sed. Dolor elementum nunc dictum interdum amet arcu aenean eu integer</p>
-            <div class="d-flex"><a class="btn btn-icon btn-sm btn-secondary btn-facebook rounded-circle me-3" href="#"><i class="ai-facebook"></i></a><a class="btn btn-icon btn-sm btn-secondary btn-instagram rounded-circle me-3" href="#"><i class="ai-instagram"></i></a><a class="btn btn-icon btn-sm btn-secondary btn-linkedin rounded-circle" href="#"><i class="ai-linkedin"></i></a></div>
+            <div class="d-flex">
+              <a class="btn btn-icon btn-sm btn-secondary btn-twitter rounded-circle me-3" href="#">
+                <i class="bi-mastodon"></i>
+              </a>
+              <a class="btn btn-icon btn-sm btn-secondary btn-instagram rounded-circle me-3" href="#">
+                <i class="bi-instagram"></i>
+              </a>
+              <a class="btn btn-icon btn-sm btn-secondary btn-linkedin rounded-circle me-3" href="#">
+                <i class="bi-linkedin"></i>
+              </a>
+              <a class="btn btn-icon btn-sm btn-secondary btn-reddit rounded-circle me-3" href="#">
+                <i class="bi-reddit"></i>
+              </a>
+              <a class="btn btn-icon btn-sm btn-secondary btn-slack rounded-circle" href="#">
+                <i class="bi-slack"></i>
+              </a>
+            </div>
           </div>
           <div class="col-md-8 col-lg-7 col-xl-6 offset-lg-2 offset-xl-3">
             <div class="row row-cols-1 row-cols-sm-3">
