--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             <div class="col-md-6 col-xl-5 offset-lg-1 order-md-2 pb-2 pb-md-0 mb-4 mb-md-0" data-aos="fade-left" data-aos-duration="500" data-aos-offset="250" data-disable-parallax-down="md"><img class="d-dark-mode-none" src="assets/img/landing/saas-2/steps/01-light.png" width="525" alt="Image"><img class="d-none d-dark-mode-block" src="assets/img/landing/saas-2/steps/01-dark.png" width="525" alt="Image"></div>
             <div class="col-md-6 col-lg-5 col-xl-4 offset-xl-1 order-md-1" data-aos="fade-right" data-aos-duration="500" data-aos-offset="250" data-disable-parallax-down="md">
               <div class="pe-md-4 pe-lg-0"><span class="badge fs-sm bg-faded-primary text-primary mb-3 mb-lg-4">Step 01</span>
-                <h3 class="h2 mb-3 mb-lg-4">Connect your site to the platform using a code</h3>
+                <h3 class="h2 mb-3 mb-lg-4">Select a challenge you want to work on</h3>
                 <p class="pb-1 pb-lg-0 mb-4 mb-lg-5">Nec id eget malesuada urna at sed est adipiscing auctor at massa id duis fames ut condimentum velit est, donec mauris tortor massa et viverra.</p><a class="btn btn-outline-primary rounded-pill" href="#">Get connected</a>
               </div>
             </div>
@@ -299,7 +299,7 @@
             <div class="col-md-6 col-xl-5 offset-xl-1 pb-2 pb-md-0 mb-4 mb-md-0" data-aos="fade-right" data-aos-duration="500" data-aos-offset="250" data-disable-parallax-down="md"><img class="d-dark-mode-none" src="assets/img/landing/saas-2/steps/02-light.png" width="473" alt="Image"><img class="d-none d-dark-mode-block" src="assets/img/landing/saas-2/steps/02-dark.png" width="473" alt="Image"></div>
             <div class="col-md-6 col-lg-5 col-xl-4 offset-lg-1" data-aos="fade-left" data-aos-duration="500" data-aos-offset="250" data-disable-parallax-down="md">
               <div class="ps-md-4 ps-lg-0"><span class="badge fs-sm bg-faded-primary text-primary mb-3 mb-lg-4">Step 02</span>
-                <h3 class="h2 mb-3 mb-lg-4">Set up important dashboard metrics</h3>
+                <h3 class="h2 mb-3 mb-lg-4">Chaos Trainer will create the environment for you</h3>
                 <ul class="list-unstyled mb-0">
                   <li class="d-flex pt-1 mt-2"><i class="ai-check-alt text-primary fs-4 mt-n1 me-2"></i>Forecasting and recommendations</li>
                   <li class="d-flex pt-1 mt-2"><i class="ai-check-alt text-primary fs-4 mt-n1 me-2"></i>Identification of patterns, analysis</li>
@@ -326,17 +326,17 @@
             <div class="col-md-6 col-xl-5 offset-lg-1 order-md-2 d-md-flex justify-content-end pb-2 pb-md-0 mb-4 mb-md-0" data-aos="fade-left" data-aos-duration="500" data-aos-offset="250" data-disable-parallax-down="md"><img class="d-dark-mode-none" src="assets/img/landing/saas-2/steps/03-light.png" width="473" alt="Image"><img class="d-none d-dark-mode-block" src="assets/img/landing/saas-2/steps/03-dark.png" width="473" alt="Image"></div>
             <div class="col-md-6 col-lg-5 col-xl-4 offset-xl-1 order-md-1" data-aos="fade-right" data-aos-duration="500" data-aos-offset="250" data-disable-parallax-down="md">
               <div class="pe-md-4 pe-lg-0"><span class="badge fs-sm bg-faded-primary text-primary mb-3 mb-lg-4">Step 03</span>
-                <h3 class="h2 mb-3 mb-lg-4">Download the data in a convenient format</h3>
+                <h3 class="h2 mb-3 mb-lg-4">You can start working on the challenge without any risk</h3>
                 <p class="pb-1 pb-lg-0 mb-4 mb-lg-5">Bibendum velit mi, ac sed ac malesuada ultrices non lectus mi pellentesque vel at tempus cras sed a eleifend augue amet mauris, leo ac amet erat.</p><a class="btn btn-outline-primary rounded-pill" href="#">Get connected</a>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!-- Testimonials + CTA-->
+      <!-- Challenges -->
       <section class="container pt-5 mt-md-3 mt-lg-2 mt-xl-4 mt-xxl-5">
         <div class="row align-items-center mt-2 pt-2 pt-sm-4 pt-lg-5">
-          <!-- Testimonials-->
+          <!-- Sneek Peek-->
           <div class="col-md-7 col-lg-6">
             <div class="card border-0 bg-secondary py-1 p-lg-4">
               <div class="card-body">
@@ -354,32 +354,14 @@
                     <!-- Item-->
                     <div class="swiper-slide">
                       <p class="lead text-dark pb-3 mb-3">"Around provides us with the detailed and accurate data we need to make strategic decisions. All tools are constantly being improved and contain a lot of useful and interesting information. Thanks to Around, we can constantly analyze data quickly, efficiently."</p>
-                      <div class="d-flex align-items-center"><img class="rounded-circle" src="assets/img/avatar/30.jpg" width="60" alt="Jenny Wilson">
-                        <div class="ps-3">
-                          <h3 class="h4 mb-0">Jenny Wilson</h3>
-                          <div class="fs-lg text-muted">Head of Marketing</div>
-                        </div>
-                      </div>
                     </div>
                     <!-- Item-->
                     <div class="swiper-slide">
                       <p class="lead text-dark pb-3 mb-3">"Turpis augue pulvinar est adipiscing netus. Arcu at aliquet venenatis elementum. Mi at gravida id nullam imperdiet a proin dolor. Egestas facilisis venenatis quisque viverra donec et. Augue convallis eu a volutpat sed ullamcorper. At dictumst sapien, tristique vitae nec massa."</p>
-                      <div class="d-flex align-items-center"><img class="rounded-circle" src="assets/img/avatar/31.jpg" width="60" alt="Esther Howard">
-                        <div class="ps-3">
-                          <h3 class="h4 mb-0">Esther Howard</h3>
-                          <div class="fs-lg text-muted">CEO, Co-Founder</div>
-                        </div>
-                      </div>
                     </div>
                     <!-- Item-->
                     <div class="swiper-slide">
                       <p class="lead text-dark pb-3 mb-3">"Cursus fames sollicitudin nunc eget sceler tortor. Sem amet, velit posuere ipsum id. Mi feugiat at vulputate vel pellentesque proin viverra. Massa, tellus orci, aenean nulla leo maecenas sed. Magna at aliquam dictum velit dolor phasellus donec et mi. Aenean adipiscing amet mauris."</p>
-                      <div class="d-flex align-items-center"><img class="rounded-circle" src="assets/img/avatar/32.jpg" width="60" alt="Nick Wenirten">
-                        <div class="ps-3">
-                          <h3 class="h4 mb-0">Nick Wenirten</h3>
-                          <div class="fs-lg text-muted">Web Developer</div>
-                        </div>
-                      </div>
                     </div>
                   </div>
                 </div>
@@ -393,7 +375,7 @@
           <!-- CTA-->
           <div class="col-md-5 col-xl-4 offset-lg-1 pt-2 pt-md-0 mt-5 mt-md-n5">
             <div class="ps-md-4 ps-lg-0">
-              <h2 class="h1 mb-4">More than 2,000 clients use Around for data analysis</h2>
+              <h2 class="h1 mb-4">You can train from a vast array of real-world challenges.</h2>
               <ul class="list-unstyled pb-2 pb-lg-0 mb-4 mb-lg-5">
                 <li class="d-flex pt-1 mt-2"><i class="ai-check-alt text-primary fs-4 mt-n1 me-2"></i>24/7 customer support</li>
                 <li class="d-flex pt-1 mt-2"><i class="ai-check-alt text-primary fs-4 mt-n1 me-2"></i>Lifetime update</li>
@@ -503,7 +485,21 @@
             <h2 class="h1 pb-3 pb-xl-2 mb-lg-4 mb-xl-5">Join Around with your favorite tools that you use daily and keep things on track</h2><a class="btn btn-outline-primary rounded-pill" href="#">See all integrations</a>
           </div>
           <div class="col-md-7 col-lg-6 offset-lg-1">
-            <div class="position-relative mx-auto" style="max-width: 510px;"><img class="d-block d-dark-mode-none" src="assets/img/landing/saas-2/tools/circle-gray-1.png" style="animation: rotate-cw 100s linear infinite;" alt="Circle"><img class="d-none d-dark-mode-block" src="assets/img/landing/saas-2/tools/circle-light-1.png" style="animation: rotate-cw 100s linear infinite;" alt="Circle"><img class="d-block d-dark-mode-none position-absolute top-0 start-0" src="assets/img/landing/saas-2/tools/circle-gray-2.png" style="animation: rotate-ccw 50s linear infinite;" alt="Circle"><img class="d-none d-dark-mode-block position-absolute top-0 start-0" src="assets/img/landing/saas-2/tools/circle-light-2.png" style="animation: rotate-ccw 50s linear infinite;" alt="Circle"><img class="position-absolute top-0 start-0 zindex-2" src="assets/img/landing/saas-2/tools/icon-1.png" data-aos="fade" data-aos-duration="600" data-aos-offset="250" data-aos-delay="1200" alt="Icon"><img class="position-absolute top-0 start-0 zindex-2" src="assets/img/landing/saas-2/tools/icon-2.png" data-aos="fade" data-aos-duration="600" data-aos-offset="250" data-aos-delay="450" alt="Icon"><img class="position-absolute top-0 start-0 zindex-2" src="assets/img/landing/saas-2/tools/icon-3.png" data-aos="fade" data-aos-duration="600" data-aos-offset="250" data-aos-delay="600" alt="Icon"><img class="position-absolute top-0 start-0 zindex-2" src="assets/img/landing/saas-2/tools/icon-4.png" data-aos="fade" data-aos-duration="600" data-aos-offset="250" data-aos-delay="750" alt="Icon"><img class="position-absolute top-0 start-0 zindex-2" src="assets/img/landing/saas-2/tools/icon-5.png" data-aos="fade" data-aos-duration="600" data-aos-offset="250" data-aos-delay="900" alt="Icon"><img class="position-absolute top-0 start-0 zindex-2" src="assets/img/landing/saas-2/tools/icon-6.png" data-aos="fade" data-aos-duration="600" data-aos-offset="250" data-aos-delay="1050" alt="Icon"><img class="position-absolute top-0 start-0 zindex-2" src="assets/img/landing/saas-2/tools/icon-7.png" data-aos="zoom-in" data-aos-duration="600" data-aos-offset="250" alt="Icon"><img class="position-absolute top-0 start-0 zindex-2" src="assets/img/landing/saas-2/tools/icon-8.png" data-aos="zoom-in" data-aos-duration="600" data-aos-offset="250" data-aos-delay="150" alt="Icon"><img class="position-absolute top-0 start-0 zindex-2" src="assets/img/landing/saas-2/tools/icon-9.png" data-aos="zoom-in" data-aos-duration="600" data-aos-offset="250" data-aos-delay="300" alt="Icon"></div>
+            <div class="position-relative mx-auto" style="max-width: 510px;">
+              <img class="d-block d-dark-mode-none" src="assets/img/landing/saas-2/tools/circle-gray-1.png" style="animation: rotate-cw 100s linear infinite;" alt="Circle">
+              <img class="d-none d-dark-mode-block" src="assets/img/landing/saas-2/tools/circle-light-1.png" style="animation: rotate-cw 100s linear infinite;" alt="Circle">
+              <img class="d-block d-dark-mode-none position-absolute top-0 start-0" src="assets/img/landing/saas-2/tools/circle-gray-2.png" style="animation: rotate-ccw 50s linear infinite;" alt="Circle">
+              <img class="d-none d-dark-mode-block position-absolute top-0 start-0" src="assets/img/landing/saas-2/tools/circle-light-2.png" style="animation: rotate-ccw 50s linear infinite;" alt="Circle">
+              <img class="position-absolute top-0 start-0 zindex-2" src="assets/img/landing/saas-2/tools/icon-1.png" data-aos="fade" data-aos-duration="600" data-aos-offset="250" data-aos-delay="1200" alt="Icon">
+              <img class="position-absolute top-0 start-0 zindex-2" src="assets/img/landing/saas-2/tools/icon-2.png" data-aos="fade" data-aos-duration="600" data-aos-offset="250" data-aos-delay="450" alt="Icon">
+              <img class="position-absolute top-0 start-0 zindex-2" src="assets/img/landing/saas-2/tools/icon-3.png" data-aos="fade" data-aos-duration="600" data-aos-offset="250" data-aos-delay="600" alt="Icon">
+              <img class="position-absolute top-0 start-0 zindex-2" src="assets/img/landing/saas-2/tools/icon-4.png" data-aos="fade" data-aos-duration="600" data-aos-offset="250" data-aos-delay="750" alt="Icon">
+              <img class="position-absolute top-0 start-0 zindex-2" src="assets/img/landing/saas-2/tools/icon-5.png" data-aos="fade" data-aos-duration="600" data-aos-offset="250" data-aos-delay="900" alt="Icon">
+              <img class="position-absolute top-0 start-0 zindex-2" src="assets/img/landing/saas-2/tools/icon-6.png" data-aos="fade" data-aos-duration="600" data-aos-offset="250" data-aos-delay="1050" alt="Icon">
+              <img class="position-absolute top-0 start-0 zindex-2" src="assets/img/landing/saas-2/tools/icon-7.png" data-aos="zoom-in" data-aos-duration="600" data-aos-offset="250" alt="Icon">
+              <img class="position-absolute top-0 start-0 zindex-2" src="assets/img/landing/saas-2/tools/icon-8.png" data-aos="zoom-in" data-aos-duration="600" data-aos-offset="250" data-aos-delay="150" alt="Icon">
+              <img class="position-absolute top-0 start-0 zindex-2" src="assets/img/landing/saas-2/tools/icon-9.png" data-aos="zoom-in" data-aos-duration="600" data-aos-offset="250" data-aos-delay="300" alt="Icon">
+            </div>
           </div>
         </div>
       </section>
